kubernetes/2mspublicaciones.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-publicaciones
  labels:
    app: ms-publicaciones
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-publicaciones
  template:
    metadata:
      labels:
        app: ms-publicaciones
    spec:
      containers:
      - name: ms-publicaciones
        image: ms-publicaciones:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ms-publicaciones-service
spec:
  selector:
    app: ms-publicaciones
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
