kubernetes/3authservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: authservice
        image: authservice:latest
        ports:
        - containerPort: 8086
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: authservice-service
spec:
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
  type: ClusterIP
