kubernetes/4api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-api-gateway
  labels:
    app: ms-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-api-gateway
  template:
    metadata:
      labels:
        app: ms-api-gateway
    spec:
      containers:
      - name: ms-api-gateway
        image: ms-api-gateway:latest
        ports:
        - containerPort: 8000
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: ms-api-gateway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
  type: NodePort
