kubernetes/5ms-catalogo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-catalogo
  labels:
    app: ms-catalogo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-catalogo
  template:
    metadata:
      labels:
        app: ms-catalogo
    spec:
      containers:
      - name: ms-catalogo
        image: ms-catalogo:latest
        ports:
        - containerPort: 8083
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ms-catalogo-service
spec:
  selector:
    app: ms-catalogo
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
