kubernetes/6ms-eureka-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-eureka-server
  labels:
    app: ms-eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-eureka-server
  template:
    metadata:
      labels:
        app: ms-eureka-server
    spec:
      containers:
      - name: ms-eureka-server
        image: ms-eureka-server:latest
        ports:
        - containerPort: 8761
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-service
spec:
  selector:
    app: ms-eureka-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: ClusterIP
