kubernetes/7ms-notificaciones.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-notificaciones
  labels:
    app: ms-notificaciones
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-notificaciones
  template:
    metadata:
      labels:
        app: ms-notificaciones
    spec:
      containers:
      - name: ms-notificaciones
        image: ms-notificaciones:latest
        ports:
        - containerPort: 8084
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ms-notificaciones-service
spec:
  selector:
    app: ms-notificaciones
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
