kubernetes/8sincronizacion.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sincronizacion
  labels:
    app: sincronizacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sincronizacion
  template:
    metadata:
      labels:
        app: sincronizacion
    spec:
      containers:
      - name: sincronizacion
        image: sincronizacion:latest
        ports:
        - containerPort: 8085
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: sincronizacion-service
spec:
  selector:
    app: sincronizacion
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
